Simulation von Audioerkennung + Navigation

--- a/Prototype/src/pages/watchlist/watchlist.html
+++ b/Prototype/src/pages/watchlist/watchlist.html
@@ -7,7 +7,5 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="center">
-    <button ion-button round (click)="startListening()">Start</button>
-  </div>
+  <p>Watchlist</p>
 </ion-content>
