--- a/Prototype/src/pages/filmInfo/filmInfo.html
+++ b/Prototype/src/pages/filmInfo/filmInfo.html
@@ -7,7 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="center">
-    <button ion-button round (click)="startListening()">Start</button>
-  </div>
+  <p>Info Page</p>
+  <p>id: {{id}}</p>
 </ion-content>
