--- a/Prototype/src/pages/tabs/tabs.html
+++ b/Prototype/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home"></ion-tab>
-
+  <ion-tab [root]="tab2Root" tabTitle="Watchlist"></ion-tab>
 </ion-tabs>
 
