--- a/Prototype/src/pages/filmInfo/filmInfo.html
+++ b/Prototype/src/pages/filmInfo/filmInfo.html
@@ -1,12 +1,80 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Info Page
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <p>Info Page</p>
-  <p>id: {{id}}</p>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-4>
+        <ion-row><img  src="{{getInfoField('Poster')}}"></ion-row>
+        <ion-row><button ion-button (click)="addToWatchlist()">Add to watchlist</button></ion-row>
+      </ion-col>
+      <ion-col col-8="">
+        <ion-row>
+          <ion-col><b>Title:</b></ion-col>
+          <ion-col>{{getInfoField("Title")}}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col><b>Genre:</b></ion-col>
+          <ion-col>{{getInfoField("Genre")}}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col><b>Country:</b></ion-col>
+          <ion-col>{{getInfoField("Country")}}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col><b>Year:</b></ion-col>
+          <ion-col>{{getInfoField("Year")}}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col><b>Director:</b></ion-col>
+          <ion-col>{{getInfoField("Director")}}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col><b>Duration:</b></ion-col>
+          <ion-col>{{getInfoField("Runtime")}}</ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+    <ion-row >
+      <button *ngIf="detailedView == false" ion-button outline (click)="showMore()">Show more</button>
+      <button  *ngIf="detailedView === true" ion-button outline (click)="showLess()">Show less</button>
+    </ion-row>
+    <ion-row *ngIf="detailedView === true">
+      <ion-row>
+        <ion-col col-4><b>Release date</b></ion-col>
+        <ion-col col-8>{{getInfoField("Released")}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-4><b>Production</b></ion-col>
+        <ion-col col-8>{{getInfoField("Production")}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-4><b>Awards</b></ion-col>
+        <ion-col col-8>{{getInfoField("Awards")}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-4><b>Actors</b></ion-col>
+        <ion-col col-8>{{getInfoField("Actors")}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-4><b>Metascore: </b></ion-col>
+        <ion-col col-8>{{getInfoField("Metascore")}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-4><b>Box Office: </b></ion-col>
+        <ion-col col-8>{{getInfoField("BoxOffice")}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-4><b>Plot</b></ion-col>
+        <ion-col col-8>{{getInfoField("Plot")}}</ion-col>
+      </ion-row>
+
+    </ion-row>
+  </ion-grid>
 </ion-content>
