--- a/Prototype/src/pages/history/history.html
+++ b/Prototype/src/pages/history/history.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Watchlist
+      History
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <p>Watchlist</p>
+  <p>History</p>
 </ion-content>
