--- a/Prototype/src/pages/watchlist/watchlist.html
+++ b/Prototype/src/pages/watchlist/watchlist.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Watchlist</p>
+  <poster (click)="showInfo(item.id)" style="width: 50%; display: inline-block; padding: 7px;" *ngFor="let item of _storage.getWatchList()" [item]="item" ></poster>
 </ion-content>
